--- a/DoodleSpace/settings.json
+++ b/DoodleSpace/settings.json
@@ -1,4 +1,19 @@
 {
     "gameSpeed": 10,
-    "fps": 60
+    "fps": 60,
+    "player":
+    {
+        "speed": 1,
+        "projectileSpeed": 1.2,
+        "shotsPerSecond": 10
+    },
+    "enemy":
+    {
+        "shotsPerSecond": 5,
+        "shotChance": 2,
+        "healthPackChance": 3,
+        "projectileSpeed": 1.2,
+        "speed": 0.25,
+        "spawnsPerSecond": 1
+    }
 }
